--- a/src/MarvelFlow/MarvelFlow.App/Views/UcFilm.xaml
+++ b/src/MarvelFlow/MarvelFlow.App/Views/UcFilm.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="MarvelFlow.App.Views.UcMovie"
+﻿<UserControl x:Class="MarvelFlow.App.Views.UcFilm"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MarvelFlow.App.Views"
-             DataContext="{Binding Movie, Source={StaticResource Locator}}"
+             DataContext="{Binding Film, Source={StaticResource Locator}}"
              mc:Ignorable="d" 
              d:DesignHeight="700" d:DesignWidth="1200">
     <Grid x:Name="___Grid__Générale">
@@ -94,7 +94,7 @@
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <Button Background="{x:Null}" BorderThickness="0"
-                                Command="{Binding DataContext.NavigateHeroCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:UcMovie}}}"
+                                Command="{Binding DataContext.NavigateHeroCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:UcFilm}}}"
                                 CommandParameter="{Binding .}">
                             <StackPanel Orientation="Vertical" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
                                 <Image Source="{Binding Image}" HorizontalAlignment="Center" VerticalAlignment="Top" Stretch="UniformToFill" MaxHeight="60" MaxWidth="60" />
