--- a/src/MarvelFlow/MarvelFlow.App/Views/UcSerie.xaml
+++ b/src/MarvelFlow/MarvelFlow.App/Views/UcSerie.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="MarvelFlow.App.Views.UserControl1"
+﻿<UserControl x:Class="MarvelFlow.App.Views.UcSerie"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -32,7 +32,7 @@
             <TextBlock 
                 Foreground="White" FontWeight="Bold"  TextAlignment="Center"  Grid.Column="1" FontSize="40"
                 HorizontalAlignment="Center" VerticalAlignment="Center" 
-                Text="{Binding Serie.Title}"/>
+                Text="{Binding Movie.Title}"/>
         </Grid>
 
         <!--Ligne 2-->
@@ -46,13 +46,11 @@
                 <RowDefinition Height="1*"/>
             </Grid.RowDefinitions>
 
-            <Image  Source="{Binding Serie.Affiche}" Grid.Column="0" Stretch="Uniform" StretchDirection="Both" Margin="0,5,0,0"/>
-            <UniformGrid Columns="2" Rows="1" Grid.Row="1" Grid.Column="0">
-                <Button Content="B.A" Foreground="White"  
-                        FontWeight="Bold" Background="#e23636" Margin="20,60" />
-                <Button Content="FAV" Foreground="White" 
-                        FontWeight="Bold" Background="#FFEEA200" Margin="20,60"/>
-            </UniformGrid>
+            <Image  Source="{Binding Movie.Affiche}" Grid.Column="0" Stretch="Uniform" StretchDirection="Both" Margin="0,5,0,0"/>
+            <Button Content="FAV" 
+                    Grid.Row="1" Grid.Column="0" 
+                    Margin="7,24,7,15" MaxWidth="100" MaxHeight="80" 
+                    Foreground="White" FontWeight="Bold" Background="#FFEEA200" />
 
             <!-- BLOC DESCRIPTION -->
             <Grid Grid.Row="0" Grid.Column="1">
@@ -61,21 +59,21 @@
                     <ColumnDefinition Width="1*"/>
                 </Grid.ColumnDefinitions>
 
-                <TextBlock Grid.Column="0"  Grid.RowSpan="3" Background="{x:Null}" Foreground="White" Text="{Binding Serie.Desc}" Margin="10.4,5,-0.2,0.4"/>
+                <TextBlock Grid.Column="0"  Grid.RowSpan="3" Background="{x:Null}" Foreground="White" Text="{Binding Movie.Desc}" Margin="10.4,5,-0.2,0.4"/>
                 <!-- UNIVERSE / STATUS / TEAM -->
                 <Border Grid.Column="1" BorderThickness="3" BorderBrush="White">
                     <UniformGrid  Columns="1"  Rows="6" Margin="15">
 
                         <TextBlock Text="Univers :" Foreground="#C95CE7" FontStyle="Italic" FontSize="20"/>
-                        <TextBlock Text="{Binding Serie.Universe}" Foreground="White" 
+                        <TextBlock Text="{Binding Movie.Universe}" Foreground="White" 
                                FontStyle="Italic" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Top"/>
                         <TextBlock Text="En cours de diffusion :" Foreground="#7DDA77" 
                                FontStyle="Italic" FontSize="20"/>
-                        <TextBlock Text="{Binding Serie.IsOver}" Foreground="White" 
+                        <TextBlock Text="{Binding Movie.IsOver}" Foreground="White" 
                                FontStyle="Italic" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Top"/>
                         <TextBlock Text="Saison(s) :" Foreground="#FFFFDC00" 
                                FontStyle="Italic" FontSize="20"/>
-                        <ComboBox Name="cmbColors" ItemsSource="{Binding Serie.listSeasons}">
+                        <ComboBox Name="cmbColors" ItemsSource="{Binding Movie.listSeasons}">
                             <ComboBox.ItemTemplate>
                                 <DataTemplate>
                                     <TextBlock Text="{Binding Saison}" />
@@ -95,7 +93,7 @@
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <Button Background="{x:Null}" BorderThickness="0"
-                                Command="{Binding DataContext.NavigateHeroCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:UcMovie}}}"
+                                Command="{Binding DataContext.NavigateHeroCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:UcSerie}}}"
                                 CommandParameter="{Binding .}">
                             <StackPanel Orientation="Vertical" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
                                 <Image Source="{Binding Image}" HorizontalAlignment="Center" VerticalAlignment="Top" Stretch="UniformToFill" MaxHeight="60" MaxWidth="60" />
