--- a/src/MarvelFlow/MarvelFlow.App/Views/UcListHero.xaml
+++ b/src/MarvelFlow/MarvelFlow.App/Views/UcListHero.xaml
@@ -34,8 +34,10 @@
             </Button>
 
             <UniformGrid Grid.Column="1"  HorizontalAlignment="Stretch" Rows="1" Columns="2" >
-                <ComboBox  Foreground="Black" Background="White" Margin="26,30" />
-                <ComboBox  Foreground="Black" Background="White"  Margin="26,30" />
+                <ComboBox  Name="ComboBoxUni" Foreground="Black" Background="White" Margin="26,30"  
+                           ItemsSource="{Binding SourceData}" SelectedItem="{Binding SelectedSourceData,Mode=TwoWay}"/>
+
+                <ComboBox  Name="ComboBoxTeam" Foreground="Black" Background="White"  Margin="26,30" />
             </UniformGrid>
 
             <TextBox Grid.Column="2" Text="{Binding SearchBar, UpdateSourceTrigger=PropertyChanged}"  
