--- a/src/MarvelFlow/MarvelFlow.App/Views/UcListHero.xaml
+++ b/src/MarvelFlow/MarvelFlow.App/Views/UcListHero.xaml
@@ -34,8 +34,22 @@
             </Button>
 
             <UniformGrid Grid.Column="1"  HorizontalAlignment="Stretch" Rows="1" Columns="2" >
-                <ComboBox  Foreground="Black" Background="White" Margin="26,30" />
-                <ComboBox  Foreground="Black" Background="White"  Margin="26,30" />
+                <ComboBox ItemsSource="{Binding EnumUniverse}" SelectedItem="{Binding SelectedUniverse,Mode=TwoWay}"
+                          Foreground="Black" Background="White" Margin="26,30" >
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding .}" />
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
+                <ComboBox ItemsSource="{Binding EnumTeam}" SelectedItem="{Binding SelectedTeam,Mode=TwoWay}"
+                          Foreground="Black" Background="White" Margin="26,30" >
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding .}" />
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
             </UniformGrid>
 
             <TextBox Grid.Column="2" Text="{Binding SearchBar, UpdateSourceTrigger=PropertyChanged}"  
