--- a/src/MarvelFlow/MarvelFlow.App/Views/UcHero.xaml
+++ b/src/MarvelFlow/MarvelFlow.App/Views/UcHero.xaml
@@ -57,7 +57,9 @@
                     <ColumnDefinition Width="1*"/>
                 </Grid.ColumnDefinitions>
 
-            <TextBlock Grid.Column="0"  Grid.RowSpan="3" Background="{x:Null}" Foreground="White" Text="{Binding Hero.Desc}" Margin="10.4,5,-0.2,0.4"/>
+                <TextBlock Grid.Column="0"  Grid.RowSpan="3" Background="{x:Null}" Foreground="White" Text="{Binding Hero.Desc}" 
+                           TextWrapping="Wrap" FontSize="20" TextTrimming="WordEllipsis"
+                           Margin="40,20"/>
                 <!-- UNIVERSE / STATUS / TEAM -->
                 <Border Grid.Column="1" BorderThickness="3" BorderBrush="White">
                 <UniformGrid  Columns="1"  Rows="6" Margin="15">
