--- a/src/MarvelFlow/MarvelFlow.App/Views/UcAdminPanel.xaml
+++ b/src/MarvelFlow/MarvelFlow.App/Views/UcAdminPanel.xaml
@@ -1,12 +1,13 @@
-﻿<UserControl x:Class="MarvelFlow.App.Views.UcAdmin"
+﻿<UserControl x:Class="MarvelFlow.App.Views.UcAdminPanel"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:MarvelFlow.App.Views"
+             DataContext="{Binding AdminPanel,Source={StaticResource Locator}}"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="700" d:DesignWidth="1200">
     <Grid>
-        
+            
     </Grid>
 </UserControl>
