+ Admin commands, navigate to admin panel, return to profile

--- a/src/MarvelFlow/MarvelFlow.App/Views/UcAdminPanel.xaml
+++ b/src/MarvelFlow/MarvelFlow.App/Views/UcAdminPanel.xaml
@@ -7,7 +7,29 @@
              DataContext="{Binding AdminPanel,Source={StaticResource Locator}}"
              mc:Ignorable="d" 
              d:DesignHeight="700" d:DesignWidth="1200">
-    <Grid>
-            
+    <Grid x:Name="___Grid__Générale">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="5*" />
+        </Grid.RowDefinitions>
+
+        <!--Ligne 1-->
+        <Grid x:Name="___Grid___NOM_HERO" Grid.Row="0" >
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="3*" />
+            </Grid.ColumnDefinitions>
+
+            <Button Grid.Column="0" Grid.Row="0"
+                Background="{x:Null}" BorderThickness="0"
+                VerticalAlignment="Center" HorizontalAlignment="Center" Margin="26,20"
+                Command='{Binding ReturnBackCommand}' >
+                <Image Source="pack://application:,,,/MarvelFlow.App;component/Images/row.png"
+                   Stretch="Uniform">
+                </Image>
+            </Button>
+
+        </Grid>
+
     </Grid>
 </UserControl>
