--- a/src/MarvelFlow/MarvelFlow.App/Views/UcProfile.xaml
+++ b/src/MarvelFlow/MarvelFlow.App/Views/UcProfile.xaml
@@ -24,7 +24,7 @@
             <Button Grid.Column="0" Grid.Row="0"
                 Background="{x:Null}" BorderThickness="0"
                 VerticalAlignment="Center" HorizontalAlignment="Center" Margin="26,20"
-                Command='{Binding ReturnBackCommand}' >
+                Command="{Binding ReturnBackCommand}" >
                 <Image Source="pack://application:,,,/MarvelFlow.App;component/Images/row.png"
                    Stretch="Uniform">
                 </Image>
@@ -32,7 +32,8 @@
 
             <TextBlock Text="NOM DE PROFIL" Grid.Row="0" Grid.Column="1" Foreground="White" VerticalAlignment="Center" HorizontalAlignment="Center" FontSize="50" FontWeight="SemiBold"/>
 
-            <Button Grid.Column="2" Grid.Row="0" Margin="30,20" Background="#e23636" BorderBrush="White" BorderThickness="4">
+            <Button Grid.Column="2" Grid.Row="0" Margin="30,20" Background="#e23636" BorderBrush="White" BorderThickness="4"
+                    Command="{Binding NavigateAdminCommand}">
                 <Run Foreground="White" FontSize="20" FontWeight="Medium">ADMIN MODE</Run>
             </Button>
         </Grid>
