Animation + mouseOver transparency added & HomeVideo update

--- a/src/MarvelFlow/MarvelFlow.App/App.xaml
+++ b/src/MarvelFlow/MarvelFlow.App/App.xaml
@@ -36,8 +36,24 @@
             <DataTemplate DataType="{x:Type vm:ListMovieViewModel}">
                 <vs:UcListMovie />
             </DataTemplate>
-            
-            
+
+            <Style TargetType="{x:Type Button}" x:Key="OtherButton">
+                <Setter Property="Template" >
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type Button}">
+                            <Border Name="Border" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}">
+                                <ContentPresenter Content="{TemplateBinding Content}" ContentTemplate="{TemplateBinding ContentTemplate}" Margin="{TemplateBinding Padding}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                            </Border>
+                            <ControlTemplate.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="Background" Value="Transparent" />
+                                </Trigger>
+                            </ControlTemplate.Triggers>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+
         </ResourceDictionary>
     </Application.Resources>
 </Application>
