--- a/src/MarvelFlow/MarvelFlow.App/MainWindow.xaml
+++ b/src/MarvelFlow/MarvelFlow.App/MainWindow.xaml
@@ -15,12 +15,69 @@
     
     <!--Defnition style general-->
     <Window.Resources>
-        <Style TargetType="{x:Type Button}">
+        
+        <!--Style Button Main MarvelFLow -->
+        <Style TargetType="{x:Type Button}" x:Key="ButtonMarvel">
+            <Setter Property="Template" >
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Name="Border" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}">
+                            <ContentPresenter Content="{TemplateBinding Content}" ContentTemplate="{TemplateBinding ContentTemplate}" Margin="{TemplateBinding Padding}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="Transparent" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
             <Style.Triggers>
-                <Trigger Property="IsMouseOver" Value="True">
-                    <Setter Property="Background" Value="{x:Null}"/>
-                </Trigger>
+
+                    <!-- Animation MouseEnter -->
+                <EventTrigger RoutedEvent="Button.MouseEnter">
+                    <EventTrigger.Actions>
+                        <BeginStoryboard>
+                            <Storyboard>
+                                <DoubleAnimation
+                  Storyboard.TargetProperty="(Button.Opacity)"
+                  From="0.7" To="1" Duration="0:0:0.3" />
+
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </EventTrigger.Actions>
+                </EventTrigger>
+
+                    <!-- Animation Mouleave -->
+                <EventTrigger RoutedEvent="Button.MouseLeave">
+                    <EventTrigger.Actions>
+                        <BeginStoryboard>
+                            <Storyboard>
+                                <DoubleAnimation
+                  Storyboard.TargetProperty="(Button.Opacity)"
+                  To="0.7" Duration="0:0:0.1" />
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </EventTrigger.Actions>
+                </EventTrigger>
             </Style.Triggers>
+        </Style>
+        
+        <Style TargetType="{x:Type Button}" x:Key="OtherButton1">
+            <Setter Property="Template" >
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Name="Border" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}">
+                            <ContentPresenter Content="{TemplateBinding Content}" ContentTemplate="{TemplateBinding ContentTemplate}" Margin="{TemplateBinding Padding}" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}"/>
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="Transparent" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
         </Style>
     </Window.Resources>
 
@@ -40,25 +97,29 @@
         <ContentControl Grid.Row="1" Grid.ColumnSpan="3" Content="{Binding CurrentVM}" />
 
         <!-- Ligne 1 -->
+        
+        <!-- CENTER -->
         <Button Grid.Row="0" Grid.Column="1"
-                Background="{x:Null}" BorderThickness="0"
-                Command='{Binding NavigateHomeCommand}' >
+                Background="Transparent" BorderThickness="0" Opacity="0.7"
+                Style="{StaticResource ButtonMarvel}"
+              Command="{Binding NavigateHomeCommand}">
             <Image Source="pack://application:,,,/MarvelFlow.App;component/Images/marvelFlowLogo.png"
                    Stretch="Uniform">
             </Image>
         </Button>
         
+        <!-- RIGHT PART -->
         <Grid Grid.Column="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="2*" />
                 <ColumnDefinition Width="1*" />
             </Grid.ColumnDefinitions>
-            <Button Grid.Column="0"  Content="Guest"
-                    Background="{x:Null}" Foreground="White"
+            <Button Grid.Column="0"  Content="Guest" Opacity="0.7"
+                    Background="Transparent" Foreground="White" Style="{StaticResource ButtonMarvel}"
                     BorderThickness="0" 
                     Command="{Binding NavigateUserWindowCommand}" FontSize="28" HorizontalAlignment="Right" VerticalAlignment="Center" FontStyle="Italic" TextOptions.TextHintingMode="Animated"/>
             
-            <Image Source="pack://application:,,,/MarvelFlow.App;component/Images/pdp2.png" Grid.Column="1" Margin="10"/>
+            <Image Source="pack://application:,,,/MarvelFlow.App;component/Images/pdp2.png" Grid.Column="1" Margin="10" Opacity="0.7"/>
         </Grid>
     </Grid>
 </Window>
