--- a/src/MarvelFlow/MarvelFlow.App/Views/UcHome.xaml
+++ b/src/MarvelFlow/MarvelFlow.App/Views/UcHome.xaml
@@ -132,7 +132,8 @@
                    FontSize="30" FontStyle="Italic"/>
 
         <!-- HOME VIDEO PART -->
-        <Button Grid.Row="1" Grid.ColumnSpan="3" Background="{x:Null}" BorderThickness="0" Margin="0,0,0,15" Style="{StaticResource OtherButton}">
+        <Button Grid.Row="1" Grid.ColumnSpan="3" Background="{x:Null}" BorderThickness="0" Margin="0,0,0,15" Style="{StaticResource OtherButton}" 
+                Command="{Binding NavigateMovieCommand }">
         <MediaElement Name="myMediaElement"   Volume="0">
             <MediaElement.Triggers>
                 <EventTrigger RoutedEvent="MediaElement.Loaded">
