--- a/src/MarvelFlow/MarvelFlow.App/Views/UcListHero.xaml
+++ b/src/MarvelFlow/MarvelFlow.App/Views/UcListHero.xaml
@@ -59,21 +59,17 @@
 
         <!--Ligne 2-->
         <Grid x:Name="___Grid__Zone_de_recherche" Grid.Row="1">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="43*"/>
-                <ColumnDefinition Width="32*"/>
-            </Grid.ColumnDefinitions>
             <ListView ItemsSource="{Binding ListHerosView}"
                       x:Name="ListViewHero" HorizontalAlignment="Stretch" VerticalAlignment="Top" 
-                      Grid.Row="0" Grid.ColumnSpan="3" Background="{x:Null}" BorderThickness="0" >
+                       Background="{x:Null}" BorderThickness="0" >
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
-                        <UniformGrid Columns="5"  VerticalAlignment="Center" Margin="40,0"  />
+                        <UniformGrid Columns="5"  VerticalAlignment="Center" Margin="50,0"  />
                     </ItemsPanelTemplate>
                 </ItemsControl.ItemsPanel>
                 <ListView.ItemTemplate>
                     <DataTemplate>
-                        <Button Background="{x:Null}" BorderThickness="0"
+                        <Button Background="{x:Null}" BorderThickness="0" Style="{StaticResource ListSelect}"
                                 Command="{Binding DataContext.NavigateHeroCommand, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:UcListHero}}}"
                                 CommandParameter="{Binding .}">
                             <StackPanel Orientation="Vertical" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
